# audit-service

./: Dockerfile  README.md  audit_report.json  docker-compose.yml  failure_testing.sh  insert_query_report.json  insert_test_ids.json  pyproject.toml  seed_data.json  test_ids.json
app/: config.py  logger.py  main.py
app/api/: audit.py  audit_log.py
app/routers/: __init__.py  audit.py  audit_log.py
app/schemas/: audit.py  audit_log.py  enums.py
app/services/: database.py  schema.py  utils.py
app/utils/: audit_tester.py  generate_seed.py  generators.py  log_and_verify.py  seeder.py
